templates/toolhub_template.yaml
---
# Source: toolhub/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: toolhub-release-name
  labels:
    app: toolhub
    chart: toolhub-1.1.12
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: toolhub
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8000
        protocol: TCP
      - port: 9102
        protocol: TCP
---
# Source: toolhub/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolhub-release-name
  labels:
    app: toolhub
    chart: toolhub-1.1.12
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: toolhub
    routed_via: release-name
  ports:
    - name: http
      targetPort: 8000
      port: 8000
---
# Source: toolhub/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolhub-release-name
  labels:
    app: toolhub
    chart: toolhub-1.1.12
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: toolhub
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: toolhub
        release: release-name
        routed_via: release-name
      annotations:
        checksum/secrets: a0cafe0d352b80c2f900cffa2c31b4eed795d1f11806858cc280d2273bd1b661
        checksum/config: eaae6f2e47880250257687a19187ccd3dd864a4153969cd182a2dfdf32817d98
        prometheus.io/scrape: "true"        
    spec:
      containers:        
        # The main application container
        - name: toolhub-release-name
          image: "docker-registry.wikimedia.org/wikimedia/wikimedia-toolhub:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 512Mi
                          
      volumes:        
        []
---
# Source: toolhub/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'toolhub-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'toolhub-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(TOOLHUB_RELEASE_NAME_SERVICE_HOST)', 'http://toolhub-release-name:8000']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
